--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.11.0", features = ["dynamic_linking"]}
-bevy-inspector-egui = "0.19"
+egui-macroquad = { version="0.15.0" } #path = "./egui-macroquad"}
+macroquad = "0.3.26"
